infrastructure/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: proj-app
  labels:
    app: proj-app
    environment: dev
    managed-by: cheetah
